[tool.poetry]
name = "phiera"
version = "2.0.15"
description = "a python hiera parser"
authors = ["Andrei Zbikowski, Rob King"]
license = "Apache 2.0"
readme = "README.md"
repository = "https://github.com/Nike-Inc/phiera"
packages = [
    { include = "phiera" },
]

maintainers = [
  "Mohamed Abdul Huq Ismail <Abdul.Ismail@nike.com>",
  "Manasi Waghmare <Manasi.Waghmare@nike.com>",
  "Marcin Zalewski <Marcin.Zalewski@nike.com"
]


[tool.poetry.dependencies]
python = "^3.7"
PyYAML = "^6.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = ">=3.0.0"
mock = ">=3.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
