[tool.poetry]
name = "phiera"
version = "2.1.0"
description = "a python hiera parser"
authors = ["Andrei Zbikowski, Rob King"]
license = "Apache 2.0"
readme = "README.md"
repository = "https://github.com/Nike-Inc/phiera"
packages = [
    { include = "phiera" },
]

maintainers = [
  "Mohamed Abdul Huq Ismail <Abdul.Ismail@nike.com>",
  "Manasi Waghmare <Manasi.Waghmare@nike.com>",
  "Marcin Zalewski <Marcin.Zalewski@nike.com"
]


[tool.poetry.dependencies]
python = "^3.10.10"
PyYAML = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
